# amazon-fba-bot

./: .env  .env.example  API_REFERENCE.md  ARCHITECTURE.md  AUTONOMOUS_MODE_GUIDE.md  AUTONOMOUS_SYSTEM_IMPLEMENTATION.md  BASE44_ARCHITECTURE.md  BASE44_TESTING_GUIDE.md  CHANGELOG_DUAL_FLOW.md  CHECKLIST_SETUP.md  DELIVERY_SUMMARY.md  DEPLOYMENT_AND_TROUBLESHOOTING.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_AUTONOMOUS.md  DUAL_FLOW_DELIVERY.md  DUAL_FLOW_IMPLEMENTATION.md  Dockerfile  EXECUTIVE_SUMMARY_SPANISH.md  FINAL_DELIVERY_CHECKLIST.md  QUICK_START.md  QUICK_START_DUAL_FLOW.md  QUICK_START_ESPAÑA.md  README.md  SCRAPERS_GUIDE.md  SCRAPER_IMPLEMENTATION_SUMMARY.md  WHATS_NEW.md  docker-compose.yml  fba_bot_cli.py  pyproject.toml  run_crawler.py  start_dual_flow.py  test_base44_webhook.py  test_monitor_with_base44.py  test_new_components.py
data/: brand_blacklist.json  category_sizes.json  input_sample.csv
examples/: README.md  scraper_usage.py
scripts/: manual_base44_post.py
src/: cli.py  crawler_database.py  main.py  telegram_bot.py
src/amazon_fba_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/api/: keepa_client.py  sp_api_client.py
src/core/: config.py  exceptions.py  logger.py  rate_limiter.py
src/pipeline/: ean_resolver.py  exporter.py  financial_calc.py  ingestor.py  shields.py
src/scrapers/: __init__.py  (+9 more)
tests/: conftest.py  test_base44_webhook.py  test_ean_resolver.py  test_financial_calc.py  test_pipeline_integration.py  test_pipeline_report.py  test_shields.py  test_sp_api_client.py
