[project]
name = "amazon-fba-bot"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "aiohttp>=3.9",
    "aiofiles>=23.0",
    "aioredis>=2.0",
    "asyncpg>=0.29",
    "click>=8.0",
    "gspread-asyncio>=1.9",
    "google-auth>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "tenacity>=8.2",
    "tqdm>=4.66",
]

[project.scripts]
fba-bot = "src.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths   = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"